# MetaPrompter

./: .context.md  .gitignore  .plan.md  README.md
.trae/rules/: project_rules.md
backend/: .context.md  .env  README.md  api_documentation.md  manage.py  pyproject.toml
backend/metaprompter/: asgi.py  settings.py  urls.py  wsgi.py
backend/prompt/: .context.md  admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/prompt/llm_utils/: config.py  service.py  template_manager.py
backend/prompt/migrations/: 0001_initial.py  0002_promptstatistics_generation_count_and_more.py
examples/: README.md  example_usage.py  test_optimization.py
frontend/: .context.md
